# SuperComp

Arnaldo/: CMakeLists.txt  crawlerDIS  crawlerDistribuido.cpp  crawlerParalelo.cpp  crawlerSequencial.cpp  outDIS.txt  outPAR.txt  outSEQ.txt
Atividade 1/: Tarefa3 - Avaliação de desempenho.ipynb  funcs.cpp  t3TemposSemSIMD.txt  t3TemposcomSIMDAVX..txt  t3TemposcomSIMDAVX2.txt
Atividade 1/.ipynb_checkpoints/: Tarefa3 - Avaliação de desempenho-checkpoint.ipynb
Atividade 1/gabriela/: notebook.tex
Atividade 3/: cameraman_copy.pgm  cameraman_limiar.pgm  copy.cpp  edge.c  edge.h  ex0  ex1  ex2  exercicio1.cpp  exercicio2.cpp  image.c  image.h  mona_limiar  mona_limiar.pgm
Atividade2/: camera_limiar  copy  exercicio2.cpp
Aula0/: t2.cpp
Aula10/: CMakeLists.txt  exemplo-fs.cpp  exfs
Aula11/: exemplo-fs.cpp
Aula12/: Aula12.ipynb
Aula12/exemplo_fs/: CMakeLists.txt  exemplo_fs.cpp
Aula12/hello/: CMakeLists.txt
Aula13-14/: Apresentação1.pptx  PC.cpp  cond_var.cpp  queue.cpp  rdv.cpp  roteiro.ipynb  t1  thread1.cpp
Aula13-14/.ipynb_checkpoints/: roteiro-checkpoint.ipynb
Aula17/: ex2  exercicio2.cpp  hello  mpi-errado1.cpp  mpierrado  square  square-mpi.cpp
Aula18/: copy  copy.cpp  ex2  exercicio2.cpp
Aula2/: ex1  exemplo1  exemplo1-threads.cpp  exemplo1.cpp  exemplo2  exemplo2-threads.cpp
Aula20/: ex0  ex1  exemplo1.cpp
Aula21/: ex1  exercicio1.cpp
Aula3/: calculo_pi.cpp  ex1  pi
Aula5/: mandel-ex4.cpp  mendel  pi  pi-omp-critical-ex1.cpp  pi-omp-critical-ex2.cpp
Aula6/: pi_mc.cpp  pi_mc_part1.cpp  pimc  random.cpp  random.h
Projeto1/.ipynb_checkpoints/: Projeto 1  - SuperComp-checkpoint.ipynb
Projeto1/Iteracao1/visualizador/: CMakeCache.txt  Makefile  body.h  cmake_install.cmake  input.txt  main.cpp  visualizador  visualizador.cpp  visualizador.h
Projeto1/Iteracao2/Iteracao2.1/visualizador/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input.txt  visualizador  visualizador.cpp  visualizador.h
Projeto1/Iteracao2/Iteracao2.2/visualizador/: CMakeCache.txt  Makefile  body.h  cmake_install.cmake  input.txt  input2.txt  main.cpp  visualizador  visualizador.cpp  visualizador.h
Projeto1/Iteracao2/Iteracao2.3/visualizador/: CMakeCache.txt  CMakeLists.txt  Makefile  body.h  cmake_install.cmake  generate.py  input.txt  input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  input_A.txt  input_B.txt  input_D.txt  input_E.txt  input_G.txt  main.cpp  out.txt  run.py  visualizador  visualizador.cpp  visualizador.h
Projeto1/Iteracao2/Iteracao2.3/visualizador/Inputs/: input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  input_F.txt
